--- a/JavaApplication1/nbproject/project.properties
+++ b/JavaApplication1/nbproject/project.properties
@@ -53,7 +53,8 @@ javac.classpath=\
     ${file.reference.itextpdf-5.2.0-javadoc.jar}:\
     ${file.reference.itextpdf-5.2.0-sources.jar}:\
     ${file.reference.itextpdf-5.2.0.jar}:\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${libs.hibernate-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
